--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,17 @@
   fill: white; /* Change the fill color to white */
 }
 
+
+/* New code for background of app.js main window! */
+/* Light Theme */
+.light-bg {
+  background-color: #fff; /* Set your desired light background color */
+  color: #000; /* Set your desired light text color */
+}
+
+/* Dark Theme */
+.dark-bg {
+  background-color: #161616; /* Set your desired dark background color */
+  color: #000000; /* Set your desired dark text color */
+}
+
