Commit - new dark mode / light mode

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@
 
 /* Dark Theme */
 .dark-bg {
-  background-color: #161616; /* Set your desired dark background color */
-  color: #000000; /* Set your desired dark text color */
+  background-color: #222222; /* Set your desired dark background color */
+  color: #ffffff; /* Set your desired dark text color */
 }
 
