Commit - Light Mode fixes

--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@
 /* New code for background of app.js main window! */
 /* Light Theme */
 .light-bg {
-  background-color: #eaeaea; /* Set your desired light background color */
+  background-color: #d8d8d8; /* Set your desired light background color */
   color: #000; /* Set your desired light text color */
 }
 
