--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,8 @@
 
 /* Light Theme */
 .light-bg {
-  background-color: #d8d8d8;
+  /* background-color: #d8d8d8; */
+  background-color: #f0f0f0;
 }
 
 /* Dark Theme */
