--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -2,7 +2,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    background-color: white; /* Change this to your desired background color */
+    background-color: #ffffff; /* Change this to your desired background color */
     /* Add any other styles you need for your navbar */
   }
   
