--- a/src/App.css
+++ b/src/App.css
@@ -125,20 +125,27 @@
   z-index: 1; /* Ensure it's below the top navbar */
 }
 
-/* Add this CSS to style the navigation links container */
+/* navigation links container */
 .bottom-navbar {
-  padding: 0px 0; /* Adjust padding as needed */
-  overflow-x: auto; /* Enable horizontal scrolling */
-  white-space: nowrap; /* Prevent line breaks for links */
+  background-color: #fafafa; /* Set your desired background color */
+  border-bottom: 1px solid #ddd; /* Add a bottom border for separation */
+/*   border-top: 1px solid #ddd;  */
+  padding: 6px 0; /* Adjust padding as needed */
+
+  /* Flex container styles */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 
 /* Style the individual navigation links */
 .bottom-navbar ul {
   list-style: none;
+  margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  gap: 120px; /* Adjust the gap between navigation links */
 }
 
 .bottom-navbar li {
@@ -147,20 +154,21 @@
 
 .bottom-navbar a {
   text-decoration: none;
-  color: #333; /* Set your desired link color */
-  padding: 10px 20px; /* Adjust padding as needed */
-  transition: background-color 0.3s ease; /* Add a smooth transition effect */
-  display: inline-block; /* Ensure links stay in a single line */
+  color: #5a5e61; /* Set your desired link color */
+  padding: 5px 10px; /* Adjust padding as needed */
+  transition: background-color 0.3s ease;
+  display: inline-block;
 }
 
 .bottom-navbar a:hover {
-  background-color: #ddd; /* Set your desired hover background color */
+  /* background-color: #ddd;  */
+  color: #ed042d;
+  /* text-decoration: underline; */
 }
 
 /* Media query for screens with a maximum width of 768px (typical mobile devices) */
 @media (max-width: 768px) {
   .bottom-navbar-container {
-    /* Adjust styles for mobile devices */
     padding: 4px 0;
   }
 }
