--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,10 @@
   background-color: #fafafa; 
   border-bottom: 1px solid #ddd; 
 /*   border-top: 1px solid #ddd;  */
-  padding: 8px 0; 
+  padding: 8px 0;
+  
+  /* Add box shadow to create a shadow at the bottom */
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08); /* Adjust the values as needed */
 
   /* Flex container styles */
   display: flex;
