--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@
 .light-bg {
   /* background-color: #d8d8d8; */
   /* background-color: #f7f7f8; */
-  background-color: #f9f9f9;
+  background-color: #ffffff;
 }
 
 /* Dark Theme */
