--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,8 @@
 
  @import url('https://fonts.googleapis.com/css2?family=Mada:wght@200;300;400;500;600;700;800;900&display=swap');
 
+ @import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:wght@400;500;600;700&display=swap');
+
 
 .App {
   text-align: center;
