--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@
 .light-bg {
   /* background-color: #d8d8d8; */
   /* background-color: #f7f7f8; */
-  background-color: #ffffff;
+  background-color: #e8eaea;
 }
 
 /* Dark Theme */
