Commit - Dark Mode / Switches

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@
   padding: 0px 0;
   
   /* Add box shadow to create a shadow at the bottom */
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.08); /* Adjust the values as needed */
+/*   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15); */
 
   /* Flex container styles */
   display: flex;
@@ -150,7 +150,7 @@
   margin: 0;
   padding: 0;
   display: flex;
-  gap: 24px; /* Adjust the gap between navigation links */
+  gap: 28px; /* Adjust the gap between navigation links */
 }
 
 .bottom-navbar li {
